<resources>
    <string name="app_name">RGIS PIV</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="splash_name">Welcome to RGIS</string>
    <string name="main_title">RGIS &amp; NEW LOOK PRE-INVENTORY VISIT/ CALL OVERVIEW</string>
    <string name="main_para1">The Pre-Inventory Visit/ Call must be completed 7-14 days prior to store inventory date for all Stores.  It is recommended to be completed with the Store Manager only.</string>
    <string name="main_para2">You must ensure you complete Exhibit 1a and Exhibit 1b  At a PIV leave copy 1b with the Store Manager to complete any agreed actions.  For a PIC leave a copy of section 1 b in the  store packet.</string>
    <string name="main_para3">For a PIV it is recommended that you take a minimum of 30 minutes to review the store, you should walk all areas of the store with the Store Manager – you should review the agreements made on this form on the day of inventory, identifying any follow on actions and support that is required to perform an accurate inventory count.</string>
    <string name="next">Next</string>
    <string name="title_activity_new_inventory_detail">NewInventoryDetailActivity</string>
    <string name="new_inventory_title">NEW LOOK INVENTORY OVERVIEW</string>
    <string name="store_name">Store Name:</string>
    <string name="store_number">Store Number:</string>
    <string name="inventory_date">Inventory Date:</string>
    <string name="rgis_arrival_time_br">RGIS Arrival Time (BR):</string>
    <string name="rgis_arrival_time_sf">RGIS Arrival Time (SF):</string>
    <string name="nl_count_manager">NL Count Manager:</string>
    <string name="nl_count_manager_contact_no">NL Count Manager Contact Number:</string>
    <string name="rgis_supervisor">RGIS Supervisor:</string>
    <string name="rgis_supervisor_contact_no">RGIS Supervisor Contact Number:</string>
    <string name="sales_floor_count_length">Sales Floor Count Length:</string>
    <string name="title_activity_invent_hot_topic">InventHotTopicActivity</string>
    <string name="invent_hot_title">INVENTORY HOT TOPICS</string>
    <string name="invent_hot_detail1">! NL Colleague involvement required for Head Counts, ticketing , preparation assistance, etc.</string>
    <string name="invent_hot_detail2">! Accuracy – 100% Head Counts are required.</string>
    <string name="invent_hot_detail3">! Care of Stock – Store must provide RGIS will dedicated Totes / Rails for Sin Bin</string>
    <string name="invent_hot_detail4">! Communication both pre / during and post inventory should be concise, clear and real-time</string>
    <string name="invent_hot_detail5">! Style / Colour / Size Process – Ensure you, the store colleagues and ALL RGIS ASET’s are aware of the correct process</string>
    <string name="title_activity_store_readiness">StoreReadinessActivity</string>
    <string name="store_readiness_title">RGIS STORE READINESS AT PIV/PIC</string>
    <string name="title_activity_back_room">BackRoomActivity</string>
    <string name="backroom_title">BACK ROOM &amp; SALES FLOOR</string>
    <string name="backroom_instruct">Walk and discuss preparation needs in depth, including the below points to be used as a guideline, noting actions and agreements made.</string>
    <string name="backroom_point1">- How many NL Staff will be available during the inventory for Head Counts?</string>
    <string name="backroom_point2">- Discuss the Security and Travel/Parking Arrangements</string>
    <string name="backroom_point3">- Emphasize sales floor recovery and preparation requirements (labels/barcodes exposed).  Back Room preparation is equally as important (loose or tote stock needs to be sorted, re-labelled etc).  Check fitting rooms.</string>
    <string name="backroom_point4">- Pair Footwear, ensure that each pair is the correct size</string>
    <string name="backroom_point5">- Accessories – to ensure accuracy and efficiency the accessories should be recovered on the day prior to being counted.</string>
    <string name="backroom_point6">- Sin Bin Areas – where will the spare totes and rails be placed to ensure RGIS do not place stock on the floor?</string>
    <string name="backroom_point7">- Explain and review the accuracy process with the Store Manager – does he/she have any questions?</string>
    <string name="backroom_point8">- Explain and review the Head Count process with the store manager – does he/she understand the stores role in this?</string>
    <string name="backroom_point9">- Windows / Mannequins to be pre-listed. </string>
    <string name="backroom_point10">- Establish a Control Desk Location and review the required Store input at pre-inventory briefing.</string>
    <string name="backroom_point11">- If the store is in a shopping mall ensure the Centre Management / Security are aware of the count.</string>
    <string name="ensure_review">Ensure you review the below Actions &amp; Agreements on the inventory count day.</string>
    <string name="actions_agreement">NL &amp; RGIS Actions and Agreements :</string>
    <string name="agreed_by">Agreed by(NL Manager) :</string>
    <string name="review_completed">RGIS Review Completed (on inventory date) :</string>
    <string name="title_activity_comments">CommentsActivity</string>
    <string name="comment_title">Comments</string>
    <string name="any_comments">Any Comments:</string>
    <string name="take_photos">Take Picture</string>
    <string name="title_activity_image">ImageActivity</string>
    <string name="submit">Submit</string>

</resources>
